# gitstuff_pkg

./: CMakeLists.txt  package.xml
map/: testmap.pgm
src/: gittest.cpp
